--- a/listicle.html
+++ b/listicle.html
@@ -9,6 +9,112 @@
     <link rel="stylesheet" href="css/listicle-style.css"/>
   </head>
   <body>
+       <img class = "profile" src = "images/vrk.png"/>
+  <p class = "name">
+    Victoria Kirst
+  </p>
+  <p class = "update">
+    Last updated Apr 7, 2017
+    <hr></hr>
+  </p>
+  <div id=flex-container>
+
+  <!-- This is the first section of the list-->
+    <div id = header>
+      <!-- We use a header div to be able to inline the number-->
+      <header class="list">
+        <!--The number and header are in the same header class, as they have same format -->
+        <p class = "number"> 1. </p>
+        Italian soda at Bytes
+      </header>
+      <a href="https://goo.gl/maps/EjneHBEPksw"> 350 Serra Mall, Stanford, CA </a>
+    </div>
+    <p class = "list">
+      When's the last time you've had an Italian soda? It had been a while for me, but
+      I wanted to join my friend for a non-caffeinated beverage at Bytes and I became
+      reaquainted with the combination of fizzy water and artificial fruit syrup. Italian
+      sodas are not so sweet as a normal soda and not so boring as a flavored carbonated
+      water. The Italian sodas at Bytes also have no cream in them (or maybe they do if
+      you ask; I haven't tried), which makes it a nice coffee shop alternative for the
+      times when you're feeling a refreshing drink that doesn't have caffeine or milk.
+    </p>
+    <!--We seperate the paragraphs to keep spacing equal and consistent -->
+    <p class = "list">
+      <bold>Recommendation:</bold> Raspberry Italian soda
+    </p>
+    <img class = "list" src = "images/italian-soda.jpg" />
+
+    <!-- This is the second section of the list-->
+    <div id = header>
+      <header class="list">
+        <p class = "number"> 2. </p>
+        Bubble tea at Pop Tea Bar
+      </header>
+      <a href="https://goo.gl/maps/3jHRC2umZCy"> 456 Cambridge Ave, Palo Alto, CA </a>
+    </div>
+    <p class = "list">
+      When your boba craving strikes, head over to Pop Tea Bar, a cute little bubble tea shop on
+      Cambridge Avenue. The menu is your standard bubble tea fare with nothing too adventurous on
+      the menu -- no bubble tea floats, for example -- but the tapioca is fresh, the service is fast,
+      and the tea is smooth and delicious! They have little bites to eat too, like popcorn chicken and
+      eggrolls, in perfect snack-size portions. There's not too much seating, but there's a cute
+      outdoor area in the back for warmer days.
+    </p>
+    <p class = "list">
+      Pop Tea Bar isn't exactly on campus, but the Marguerite has got you covered. Ride the 1050A to
+      California and El Camino and it's a short walk from there. (11 minutes total from the Gates
+      Computer Science Building!)
+    </p>
+    <p class = "list">
+      <bold>Recommendation:</bold> Classic Milk Tea with tapioca + an order of popcorn chicken.
+    </p>
+    <img class = "list" src = "images/boba.jpg" />
+
+
+    <!-- This is the third section of the list-->
+    <div id = header>
+      <header class="list">
+        <p class = "number"> 3. </p>
+        Latte at CoHo
+      </header>
+      <a href="https://goo.gl/maps/jaov5FhK5852"> 459 Lagunita Dr, Stanford, CA </a>
+    </div>
+    <p class = "list">
+      I can't tell you whether CoHo has a particularly amazing Vanilla Bean Latte, only because CoHo
+      is the only place I've ever ordered a Vanilla Bean Latte from. I'm not even totally sure I know
+      what a Vanilla Bean Latte is supposed to taste like. What I do know is the Vanilla Bean Latte I
+      ordered on a whim from CoHo was delicious.
+    </p>
+    <p class = "list">
+      <bold>Recommendation:</bold> Vanilla Bean Latte
+    </p>
+    <img class = "list" src = "images/coho-coffee.jpg" />
+
+
+    <!-- This is the fourth section of the list-->
+    <div id = header>
+      <header class="list">
+        <p class = "number"> 4. </p>
+        Agua Fresca at Nexus Cafe
+      </header>
+      <a href="https://goo.gl/maps/WzJZx183auA2"> 318 Campus Drive, Stanford, CA </a>
+    </div>
+    <p class = "list">
+      Nexus Cafe has a lot of tasty things packed into its cafeteria space, including agua fresca!
+      Grab a cup of this fresh and fruity beverage before you head to the check out line. Nexus Cafe
+      has plenty of indoor and outdoor seating, too, so on the next sunny day, take a break on the
+      patio with a cup of agua fresca, and maybe a burrito.
+    </p>
+    <p class = "list">
+      <bold>Recommendation:</bold> Agua Fresca
+    </p>
+    <img class = "list" src = "images/nexus-cafe.jpg" />
+
+  </div>
+
+</body>
+</html>
+
 
   <!-- TODO(you): Write the HTML necessary to complete HW1! -->
 
